Fase 1 feita, com mais parametros

--- a/simulador.conf
+++ b/simulador.conf
@@ -7,4 +7,6 @@ tamanhoFilaCentro1:36
 tamanhoFilaCentro2:23
 tamanhoHospital:324
 probabilidadePositivo:0.15
+probabilidadeTesteNormalFalsoPositivo:0.05
+probabilidadeTesteRapidoFalsoPositivo:0.30
 tempoSimulacao:180
