Definicao de pessoa e variaveis globais

--- a/simulador.conf
+++ b/simulador.conf
@@ -6,7 +6,9 @@ tempoEsperaCentro2:5
 tamanhoFilaCentro1:36
 tamanhoFilaCentro2:23
 tamanhoHospital:324
+numeroMedicos:10
 probabilidadePositivo:0.15
 probabilidadeTesteNormalFalsoPositivo:0.05
 probabilidadeTesteRapidoFalsoPositivo:0.30
+probabilidadeNaoIdosoPrecisaHospital:0.15
 tempoSimulacao:180
