--- a/simulador.conf
+++ b/simulador.conf
@@ -11,4 +11,5 @@ probabilidadePositivo:0.15
 probabilidadeTesteNormalFalsoPositivo:0.05
 probabilidadeTesteRapidoFalsoPositivo:0.30
 probabilidadeNaoIdosoPrecisaHospital:0.15
-tempoSimulacao:180
+tempoParaCurar:14
+tempoSimulacao:3
