Informacao do monitor imprime no terminal e ficheiro

--- a/simulador.conf
+++ b/simulador.conf
@@ -11,5 +11,7 @@ probabilidadePositivo:0.15
 probabilidadeTesteNormalFalsoPositivo:0.05
 probabilidadeTesteRapidoFalsoPositivo:0.30
 probabilidadeNaoIdosoPrecisaHospital:0.15
+probabilidadeIdosoMorrer:0.40
+probabilidadeNaoIdosoMorrer:0.05
 tempoParaCurar:14
 tempoSimulacao:3
