Mais parametros configuracao

--- a/simulador.conf
+++ b/simulador.conf
@@ -7,9 +7,11 @@ tamanhoFilaCentro1:36
 tamanhoFilaCentro2:23
 tamanhoHospital:324
 numeroMedicos:10
-probabilidadePositivo:0.15
-probabilidadeTesteNormalFalsoPositivo:0.05
-probabilidadeTesteRapidoFalsoPositivo:0.30
+probabilidadeSerIdoso:0.15
+probabilidadeMedicoPositivo:0.15
+probabilidadePopulacaoPositivo:0.15
+probabilidadeTesteNormalInconclusivo:0.05
+probabilidadeTesteRapidoInconclusivo:0.30
 probabilidadeNaoIdosoPrecisaHospital:0.15
 probabilidadeIdosoMorrer:0.40
 probabilidadeNaoIdosoMorrer:0.05
