Criação das tarefas e inicializaçao da estrutura Centro
Falta ver como iremos proceder aos "Centros"

--- a/simulador.conf
+++ b/simulador.conf
@@ -6,6 +6,7 @@ tempoEsperaCentro2:5
 tamanhoFilaCentro1:36
 tamanhoFilaCentro2:23
 tamanhoHospital:324
+numeroPessoas:500
 numeroMedicos:10
 probabilidadeSerIdoso:0.15
 probabilidadeMedicoPositivo:0.15
