Contagem do tempo em milisegundos

--- a/simulador.conf
+++ b/simulador.conf
@@ -1,8 +1,6 @@
-tempoMedioChegada:5
-tempoTesteNormal:10
-tempoTesteRapido:3
-tempoEsperaCentro1:4
-tempoEsperaCentro2:5
+tempoMedioChegada (em milisegundos = minutos):5
+tempoTesteNormal (em centesimos = horas):10
+tempoTesteRapido (em centesimos = horas):3
 tamanhoFilaCentro1:36
 tamanhoFilaCentro2:23
 tamanhoHospital:324
@@ -15,5 +13,5 @@ probabilidadeTesteRapidoInconclusivo:0.30
 probabilidadeNaoIdosoPrecisaHospital:0.15
 probabilidadeIdosoMorrer:0.40
 probabilidadeNaoIdosoMorrer:0.05
-tempoParaCurar:14
-tempoSimulacao:3
+tempoParaCurar (em dias = segundos):14
+tempoSimulacao (em dias = segundos):3
