Numero de pontos de testagem

--- a/simulador.conf
+++ b/simulador.conf
@@ -1,8 +1,10 @@
-tempoMedioChegada (em milisegundos = minutos):5
-tempoTesteNormal (em centesimos = horas):10
-tempoTesteRapido (em centesimos = horas):3
+tempoMedioChegada (em 33 milisegundos = minutos):5
+tempoTesteNormal (em "horas"):10
+tempoTesteRapido (em "horas"):3
 tamanhoFilaCentro1:36
 tamanhoFilaCentro2:23
+numeroPontosTestagemCentro1:3
+numeroPontosTestagemCentro2:2
 tamanhoHospital:324
 numeroMedicos:10
 probabilidadeSerIdoso:0.15
@@ -13,5 +15,5 @@ probabilidadeTesteRapidoInconclusivo:0.30
 probabilidadeNaoIdosoPrecisaHospital:0.15
 probabilidadeIdosoMorrer:0.40
 probabilidadeNaoIdosoMorrer:0.05
-tempoParaCurar (em dias = segundos):14
-tempoSimulacao (em dias = segundos):3
+tempoParaCurar (em "dias"):14
+tempoSimulacao (em "dias"):3
