--- a/simulador.conf
+++ b/simulador.conf
@@ -1,4 +1,4 @@
-tempoMedioChegada (em 33 milisegundos = minutos):5
+tempoMedioChegada (em 42 milisegundos = minuto):5
 tempoTesteNormal (em "horas"):10
 tempoTesteRapido (em "horas"):3
 tamanhoFilaCentro1:36
@@ -6,7 +6,6 @@ tamanhoFilaCentro2:23
 numeroPontosTestagemCentro1:3
 numeroPontosTestagemCentro2:2
 tamanhoHospital:324
-numeroMedicos:10
 probabilidadeSerIdoso:0.15
 probabilidadeMedicoPositivo:0.15
 probabilidadePopulacaoPositivo:0.15
@@ -16,4 +15,4 @@ probabilidadeNaoIdosoPrecisaHospital:0.15
 probabilidadeIdosoMorrer:0.40
 probabilidadeNaoIdosoMorrer:0.05
 tempoParaCurar (em "dias"):14
-tempoSimulacao (em "dias"):3
+tempoSimulacao (em "dias"):1
