--- a/simulador.conf
+++ b/simulador.conf
@@ -1,13 +1,14 @@
 tempoMedioChegada (em 42 milisegundos = minuto):5
 tempoTesteNormal (em "horas"):10
 tempoTesteRapido (em "horas"):3
+tempoCooldownPontosTestagem (em "minutos"):10
 tamanhoFilaCentro1:36
 tamanhoFilaCentro2:23
 numeroPontosTestagemCentro1:3
 numeroPontosTestagemCentro2:2
 tamanhoHospital:324
 probabilidadeSerIdoso:0.15
-probabilidadeMedicoPositivo:0.15
+probabilidadeMedicoPositivo:0.05
 probabilidadePopulacaoPositivo:0.15
 probabilidadeTesteNormalInconclusivo:0.05
 probabilidadeTesteRapidoInconclusivo:0.30
