--- a/simulador.conf
+++ b/simulador.conf
@@ -2,6 +2,7 @@ tempoMedioChegada (em 42 milisegundos = minuto):5
 tempoTesteNormal (em "horas"):10
 tempoTesteRapido (em "horas"):3
 tempoCooldownPontosTestagem (em "minutos"):10
+tempoMaximoEsperaMedio (em "minutos"):15
 tamanhoFilaCentro1:36
 tamanhoFilaCentro2:23
 numeroPontosTestagemCentro1:3
