Picos implementados, médicos disponíveis talvez errado

--- a/simulador.conf
+++ b/simulador.conf
@@ -1,11 +1,11 @@
-tempoMedioChegada (em 42 milisegundos = minuto):3
+tempoMedioChegada (em 42 milisegundos = minuto):10
 tempoTesteNormal (em "horas"):10
 tempoTesteRapido (em "horas"):3
 tempoCooldownPontosTestagem (em "minutos"):30
 tempoMaximoEsperaMedio (em "minutos"):180
 tamanhoFilaCentro1:36
 tamanhoFilaCentro2:23
-numeroPontosTestagemCentro1:3
+numeroPontosTestagemCentro1:2
 numeroPontosTestagemCentro2:2
 tamanhoHospital:324
 probabilidadeSerIdoso:0.65
@@ -13,8 +13,10 @@ probabilidadeMedicoPositivo:0.30
 probabilidadePopulacaoPositivo:0.15
 probabilidadeTesteNormalInconclusivo:0.05
 probabilidadeTesteRapidoInconclusivo:0.30
+probabilidadeIdosoPrecisaHospital:0.85
 probabilidadeNaoIdosoPrecisaHospital:0.15
 probabilidadeIdosoMorrer:0.40
 probabilidadeNaoIdosoMorrer:0.05
-tempoParaCurar (em "dias"):3
+tempoParaCurar (em "dias"):5
 tempoSimulacao (em "dias"):30
+picos:3-5, 9-4
