--- a/simulador.conf
+++ b/simulador.conf
@@ -1,22 +1,22 @@
-tempoMedioChegada (em 42 milisegundos = minuto):10
-tempoTesteNormal (em "horas"):10
-tempoTesteRapido (em "horas"):3
-tempoCooldownPontosTestagem (em "minutos"):30
-tempoMaximoEsperaMedio (em "minutos"):180
-tamanhoFilaCentro1:36
-tamanhoFilaCentro2:23
-numeroPontosTestagemCentro1:2
-numeroPontosTestagemCentro2:2
-tamanhoHospital:20
-probabilidadeSerIdoso:0.65
-probabilidadeMedicoPositivo:0.30
-probabilidadePopulacaoPositivo:0.15
-probabilidadeTesteNormalInconclusivo:0.05
-probabilidadeTesteRapidoInconclusivo:0.30
-probabilidadeIdosoPrecisaHospital:0.85
-probabilidadeNaoIdosoPrecisaHospital:0.15
-probabilidadeIdosoMorrer:0.40
-probabilidadeNaoIdosoMorrer:0.05
-tempoParaCurar (em "dias"):5
-tempoSimulacao (em "dias"):30
-picos:3-5, 9-4
+Tempo medio de chegada das pessoas aos centros de teste (em 42 milisegundos = "minuto"):10
+Tempo para obter resposta de um teste normal (em "horas"):10
+Tempo para obter resposta de um teste rapido (em "horas"):3
+Tempo de cooldown dos pontos de testagem nos centros (em "minutos"):30
+Tempo maximo medio de espera na fila do centro (em "minutos"):180
+Tamanho maximo da fila do centro 1:36
+Tamanho maximo da fila do centro 2:23
+Numero de pontos de testagem do centro 1:2
+Numero de pontos de testagem do centro 2:2
+Tamanho do hospital:20
+Probabilidade de pessoa ser idosa:0.65
+Probabilidade de medico testar positivo:0.30
+Probabilidade da restante populacao (nao medicos) testar positivo:0.40
+Probabilidade de teste normal inconclusivo:0.05
+Probabilidade de teste rapido inconclusivo:0.30
+Probabilidade de idoso precisar de ajuda medica (hospital):0.85
+Probabilidade de nao idoso precisar de ajuda medica (hospital):0.15
+Probabilidade de idoso morrer:0.40
+Probabilidade de nao idoso morrer:0.05
+Tempo para recuperar do COVID-19 (em "dias"):5
+Duracao da simulacao (em "dias"):30
+Picos:3-5, 9-4
