--- a/simulador.conf
+++ b/simulador.conf
@@ -1,5 +1,5 @@
-Tempo medio de chegada das pessoas aos centros de teste (em 42 milisegundos = "minuto"):2
-Tempo para obter resposta de um teste normal (em "horas"):10
+Tempo medio de chegada das pessoas aos centros de teste (em 42 milisegundos = "minuto"):5
+Tempo para obter resposta de um teste normal (em "horas"):7
 Tempo para obter resposta de um teste rapido (em "horas"):3
 Tempo de cooldown dos pontos de testagem nos centros (em "minutos"):30
 Tempo maximo medio de espera na fila do centro (em "minutos"):180
@@ -8,15 +8,15 @@ Tamanho maximo da fila do centro 2:23
 Numero de pontos de testagem do centro 1:2
 Numero de pontos de testagem do centro 2:5
 Tamanho do hospital:320
-Probabilidade de pessoa ser idosa:0.70
-Probabilidade de medico testar positivo:0.30
+Probabilidade de pessoa ser idosa:0.3
+Probabilidade de medico testar positivo:0.20
 Probabilidade da restante populacao (nao medicos) testar positivo:0.40
 Probabilidade de teste normal inconclusivo:0.05
-Probabilidade de teste rapido inconclusivo:0.30
+Probabilidade de teste rapido inconclusivo:0.20
 Probabilidade de idoso precisar de ajuda medica (hospital):0.85
 Probabilidade de nao idoso precisar de ajuda medica (hospital):0.15
 Probabilidade de idoso morrer:0.40
 Probabilidade de nao idoso morrer:0.05
 Tempo para recuperar do COVID-19 (em "dias"):5
 Duracao da simulacao (em "dias"):30
-Picos:3-5, 9-4
+Picos:1-2, 2-1,4-1
