--- a/simulador.conf
+++ b/simulador.conf
@@ -1,12 +1,12 @@
 Tempo medio de chegada das pessoas aos centros de teste (em 42 milisegundos = "minuto"):5
-Tempo para obter resposta de um teste normal (em "horas"):7
-Tempo para obter resposta de um teste rapido (em "horas"):3
+Tempo para obter resposta de um teste normal (em "horas"):6
+Tempo para obter resposta de um teste rapido (em "horas"):2
 Tempo de cooldown dos pontos de testagem nos centros (em "minutos"):30
-Tempo maximo medio de espera na fila do centro (em "minutos"):180
-Tamanho maximo da fila do centro 1:36
-Tamanho maximo da fila do centro 2:23
+Tempo maximo medio de espera na fila do centro (em "minutos"):300
+Tamanho maximo da fila do centro 1:50
+Tamanho maximo da fila do centro 2:50
 Numero de pontos de testagem do centro 1:2
-Numero de pontos de testagem do centro 2:5
+Numero de pontos de testagem do centro 2:3
 Tamanho do hospital:320
 Probabilidade de pessoa ser idosa:0.3
 Probabilidade de medico testar positivo:0.20
@@ -18,5 +18,5 @@ Probabilidade de nao idoso precisar de ajuda medica (hospital):0.15
 Probabilidade de idoso morrer:0.40
 Probabilidade de nao idoso morrer:0.05
 Tempo para recuperar do COVID-19 (em "dias"):5
-Duracao da simulacao (em "dias"):30
-Picos:1-2, 2-1,4-1
+Duracao da simulacao (em "dias"):20
+Picos:1-2, 2-1, 4-4, 18-10
